--- a/res/styles/main.css
+++ b/res/styles/main.css
@@ -1,16 +1,22 @@
 .root{
-    -fx-background-color: #000;
+    -fx-background-color: #282633;
+    -fx-background-image: url('file:res/img/mainBackground.png');
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: 120%;
+    -fx-background-position: -60px 0px;
 }
 
 .title{
     -fx-text-fill: #fff;
-    -fx-font: 96 Minecraft;
+    -fx-font: 68 Minecraft;
+
 }
 
-.button{
+.button {
     -fx-background-image: url('file:res/img/buttonbg.png');
-    -fx-background-color: rgba(0,0,0,0);
+    -fx-background-color: rgba(0, 0, 0, 0);
     -fx-background-size: auto;
+    -fx-background-position: center center;
     -fx-text-fill: #fff;
     -fx-font: 24 Minecraft;
 }
