--- a/res/styles/editor.css
+++ b/res/styles/editor.css
@@ -6,7 +6,25 @@
     -fx-border-color: #282633;
     -fx-border-width: 2px;
 }
+.label{
+    -fx-background-color: rgba(0,0,0,0);
+    -fx-border-width: 0px;
+}
+.menu-item:hover{
+    -fx-background-color: #999999;
+}
+.context-menu{
+    -fx-background-color: #282633;
+    -fx-border-color: #282633;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+}
 .table-row-cell {
     -fx-background-color: #282633;
 }
-
+.scroll-bar:horizontal{
+    -fx-background-color: #282633;
+}
+.scroll-bar:vertical{
+    -fx-background-color: #282633;
+}
